# UBER-DEMAND-PREDICTOR

./: .gitignore  MLmodel.ipynb  README.md  app.py  evaluate_model.py  pyproject.toml  sample.py
static/: style.css
templates/: index.html
